--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,7 @@
 name: reactive_checbox_group
 description: "A new Flutter package project."
 version: 0.0.1
+repository: "https://github.com/devaryakjha/reactive_checbox_group.git"
 
 environment:
   sdk: ">=3.2.3 <4.0.0"
