Update version number in pubspec.yaml

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: reactive_checbox_group
 description: "A new Flutter package project."
-version: 0.0.1
+version: 1.0.0+1
 repository: "https://github.com/devaryakjha/reactive_checbox_group.git"
 
 environment:
