--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: reactive_checbox_group
-description: "A new Flutter package project."
+description: "A package to help create a group of reactive checkboxes in flutter."
 version: 1.0.0+1
 repository: "https://github.com/devaryakjha/reactive_checbox_group.git"
 
