--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   reactive_checbox_group:
     path: ../
+  reactive_forms: ^16.1.1
 
 dev_dependencies:
   flutter_test:
