--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: reactive_checbox_group
 description: "A package to help create a group of reactive checkboxes in flutter."
 version: 1.0.5
-repository: "https://github.com/devaryakjha/reactive_checbox_group.git"
+repository: "https://github.com/devaryakjha/reactive_checbox_group"
 
 environment:
   sdk: ">=3.2.3 <4.0.0"
